--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,15 @@
-.*.sw?
-.bundle
-.rspec_system
-.vagrant
+pkg/
 Gemfile.lock
-pkg
-spec/fixtures
+Gemfile.local
+vendor/
+.vendor/
+spec/fixtures/manifests/
+spec/fixtures/modules/
+.vagrant/
+.bundle/
+coverage/
+log/
+.idea/
+*.iml
+.*.sw?
+.yardoc/
