--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,9 @@ notifications:
   email: false
 deploy:
   provider: puppetforge
-  user: puppet
+  user: brainsware
   password:
-    secure: "GpJtOasaHmxgHmA+PZ4w/KdYNIa4//PiO6F2qa58888cfK/7/9rCwZ5mbh+qsChMAy1QbVeDQZGFAgqxcL7Ix4uEf4QeQOpgOwAMPBl7SjctDb23iAAGU/qWmG2+nPAFqUdsA1zQafu89/ou0M/Ye0cJpG0vRb6YhrhhRRXuw3M="
+  secure: "iipgIL9icn8g2nHtx13PZVen7Cq2+/t/f+daZCtbXBLF/t89vktL48FoYoKBARHc7c1NEiMD9xcXIE9SWz4xM0d/5jcGiUc0uN7vnasE/xebDrJTD6LGPRzO2CkJ2bDdAe4e3afInIoWroed34qEYQ5+AWVFN0m/kVJGxbCit6c="
   on:
     tags: true
     # all_branches is required to use tags
